--- a/configurator.cabal
+++ b/configurator.cabal
@@ -26,14 +26,19 @@ flag developer
 library
   exposed-modules:
     Data.Configurator
+    Data.Configurator.Types
 
   other-modules:
+    Data.Configurator.Instances
     Data.Configurator.Parser
     Data.Configurator.Types.Internal
 
   build-depends:
     attoparsec-text >= 0.8.5.0,
     base == 4.*,
+    bytestring,
+    directory,
+    old-time,
     text >= 0.11.1.0,
     unordered-containers	
 
