--- a/configurator.cabal
+++ b/configurator.cabal
@@ -15,6 +15,23 @@ bug-reports:     http://github.com/mailrank/configurator/issues
 build-type:      Simple
 description:
   A configuration management library for programs and daemons.
+  .
+  Features include:
+  .
+  * Automatic, dynamic reloading in response to modifications to
+    configuration files.
+  .
+  * The simple, but flexible, configuration language supports several
+    of the most commonly needed types of data, along with
+    interpolation of strings from the configuration or the system
+    environment (e.g. @$(HOME)@).
+  .
+  * Use the @import@ directive to break up the configuration of a
+    complex application into smaller files, or to easily share pieces
+    of common configuration data across several applications.
+  .
+  For details of the configuration file format, see
+  <http://hackage.haskell.org/packages/archive/configurator/latest/doc/html/Data-Configurator.html>.
 
 extra-source-files:
     README.markdown
