--- a/configurator.cabal
+++ b/configurator.cabal
@@ -56,6 +56,7 @@ library
     base == 4.*,
     bytestring,
     directory,
+    hashable,
     old-time,
     text >= 0.11.1.0,
     unordered-containers	
