Try to detect files that change within a 1-second window.
This is racy and unreliable, but usually works.

--- a/configurator.cabal
+++ b/configurator.cabal
@@ -57,8 +57,8 @@ library
     bytestring,
     directory,
     hashable,
-    old-time,
     text >= 0.11.1.0,
+    unix-compat,
     unordered-containers	
 
   if flag(developer)
