--- a/configurator.cabal
+++ b/configurator.cabal
@@ -4,14 +4,14 @@ license:         BSD3
 license-file:    LICENSE
 category:        Configuration, Data
 copyright:       Copyright 2011 MailRank, Inc.
-author:          Bryan O'Sullivan <bos@mailrank.com>
-maintainer:      Bryan O'Sullivan <bos@mailrank.com>
+author:          Bryan O'Sullivan <bos@serpentine.com>
+maintainer:      Bryan O'Sullivan <bos@serpentine.com>
 stability:       experimental
 tested-with:     GHC == 7.0.3
 synopsis:        Configuration management
 cabal-version:   >= 1.8
-homepage:        http://github.com/mailrank/configurator
-bug-reports:     http://github.com/mailrank/configurator/issues
+homepage:        http://github.com/bos/configurator
+bug-reports:     http://github.com/bos/configurator/issues
 build-type:      Simple
 description:
   A configuration management library for programs and daemons.
@@ -72,7 +72,7 @@ library
 
 source-repository head
   type:     git
-  location: http://github.com/mailrank/configurator
+  location: http://github.com/bos/configurator
 
 source-repository head
   type:     mercurial
