better string interpolation support scoping.

--- a/tests/configurator-tests.cabal
+++ b/tests/configurator-tests.cabal
@@ -10,7 +10,7 @@ Executable configurator-test
                      directory,
                      HUnit,
                      text,
-                     attoparsec-text,
+                     attoparsec,
                      unordered-containers,
                      unix-compat,
                      hashable,
