--- a/tests/resources/interp.cfg
+++ b/tests/resources/interp.cfg
@@ -1,4 +1,5 @@
 services = "$(HOME)/services"
+root = "can be overwritten by inner block."
 myprogram {
         name = "myprogram"
         root = "$(services)/$(name)"
