fancier interpolation (fixes #5).

--- a/tests/resources/interp.cfg
+++ b/tests/resources/interp.cfg
@@ -8,3 +8,13 @@ myprogram {
         stderr = "$(root)/stderr"
         delay = 1
 }
+dir = "$(HOME)"
+top {
+    dir = "$(dir)/top"
+    layer1 {
+        dir = "$(dir)/layer1"
+        layer2 {
+            dir = "$(dir)/layer2"
+        }
+    }
+}
