--- a/configurator.cabal
+++ b/configurator.cabal
@@ -43,6 +43,7 @@ extra-source-files:
 flag developer
   description: operate in developer mode
   default: False
+  manual: True
 
 library
   exposed-modules:
