Make test suite actually work (in a sandbox)

--- a/configurator.cabal
+++ b/configurator.cabal
@@ -87,6 +87,7 @@ test-suite unit-tests
   Build-depends:  configurator,
                   base,
                   directory,
+                  filepath,
                   HUnit,
                   text,
                   attoparsec,
