Allow one-line grouping using "." in idents
Fixes #19

--- a/tests/resources/pathological.cfg
+++ b/tests/resources/pathological.cfg
@@ -30,10 +30,12 @@ af
 #baz
 ]#quux
 
-ag { q-e { i_u9 { a=false}}}
+ag { q-e { i_u9 { a=true}}}
 
 ba = "$(HOME)"
 
 xs = [1,2,3]
 
 c = "x"
+
+ag.q-e.i_u9.a=false
